Modify .env.example for bot configuration
Updated example environment variables for Discord bot.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Token del bot de Discord
 DISCORD_TOKEN=tu_token_real_aqui
 
-# Tu ID de Discord
-OWNER_ID=123456789012345678
+# Client ID del bot
+CLIENT_ID=tu_client_id_aqui
 
-# Modo debug
+# Tu ID de Discord
+OWNER_ID=tu_id_aqui
+
+# Modo debug (opcional)
 DEBUG_MODE=False
